<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LoCall</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_account">Account</string>
    <string name="hint_search">Search</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="btn_link_to_register">New user ? Sign up now.</string>
    <string name="btn_link_to_login">Already registered ! Back to Login.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>